--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,13 @@
     "build:ui": "cd ../frontend; npm run build; cp -r dist ../backend; rm -r dist; cd ../backend;"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.848.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10"
   }
 }
